Fixed many layout issues, added resizable splitters.

--- a/server/rest_api/static/css/app.css
+++ b/server/rest_api/static/css/app.css
@@ -2,11 +2,21 @@
 /* For documentation: http://www.w3schools.com/cssref/css_selectors.asp */
 
 
-svg {
-  width:100%;
-  height:800px;
+.login-frame{
+  top:0px;
+  position:absolute;
 }
 
+
+.model-frame{
+  top:0px;
+  position:absolute;
+}
+
+svg {
+  width:inherit;
+  height:100%;
+}
 
 /* Formatting details for the diagrams */
 .archblock {
@@ -50,7 +60,7 @@ line {
     background: #f8faff;
     border: 1px solid #dae2ea;
     color: #7c9eb2;
-    padding: 10px 10px;
+    padding: 1px 1px;
 }
 
 .angular-ui-tree-handle:hover {
@@ -70,4 +80,92 @@ line {
 .group-title {
     background-color: #687074 !important;
     color: #FFF !important;
+}
+
+.btn-xs, .btn-group-xs > .btn {
+  padding: 1px 3px;
+  font-size: 9px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.position-fixed {
+  position: fixed;
+}
+
+.split-panes
+{
+  left: 0px;
+  right: 0px;
+  top: 50px;
+  bottom: 0px;
+  position: absolute;
+}
+
+.split-panes > .split-handler
+{
+  background: transparent;
+  position: absolute;
+  z-index: 999;
+}
+
+/* Horizontal */
+
+.split-panes.horizontal > .split-handler
+{
+  width: 4px;
+  top: 0px;
+  left: 50%;
+  bottom: 0px;
+  cursor: ew-resize;
+}
+
+.split-panes.horizontal > .split-pane1,
+.split-panes.horizontal > .split-pane2
+{
+  position: absolute;
+  height: 100%;
+}
+
+.split-panes.horizontal > .split-pane1
+{
+  width: 50%;
+}
+
+.split-panes.horizontal > .split-pane2
+{
+  left: 50%;
+  right: 0px;
+  border-left: 1px solid #aaa;
+}
+
+
+/* Vertical */
+
+.split-panes.vertical > .split-handler
+{
+  height: 4px;
+  top: 50%;
+  left: 0px;
+  right: 0px;
+  cursor: ns-resize;
+}
+
+.split-panes.vertical > .split-pane1,
+.split-panes.vertical > .split-pane2
+{
+  position: absolute;
+  width: 100%;
+}
+
+.split-panes.vertical > .split-pane1
+{
+  height: 50%;
+}
+
+.split-panes.vertical > .split-pane2
+{
+  top: 50%;
+  bottom: 0px;
+  border-top: 1px solid #aaa;
 }
